Draw gradient consists of two colors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="l-container">
-	<div class="l-options">
+	<div class="l-options" id="control-panel">
 		<div class="option" data-elem="options-gradient1">
 			<div class="option__content">
 				<div class="option__cell">
@@ -84,5 +84,8 @@
 </div>
 <script src="js/vendor/jquery.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/gradient.js"></script>
+<script src="js/canvas.js"></script>
+<script src="js/control-panel.js"></script>
 </body>
 </html>
