Show result gradient text

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <div class="l-container">
-	<div class="l-options" id="control-panel">
-		<div class="option" data-elem="options-gradient1">
+	<div class="l-options">
+		<div class="option" data-elem="options-gradient1" id="control-panel">
 			<div class="option__content">
 				<div class="option__cell">
 					<label class="option__label">
@@ -82,12 +82,12 @@
 				<span class="option__control option__order option__order--down">&#8681;</span>
 			</div>
 		</div>
-		<div class="start">
-			<button class="start__button">Generate</button>
-		</div>
 	</div>
 	<div class="l-example">
 		<div id="example"></div>
+	</div>
+	<div class="l-result">
+		<div id="result"></div>
 	</div>
 </div>
 <script src="js/vendor/jquery.min.js"></script>
